# Game

./: CMakeLists.txt  README.md  main.c  version.h
libs/: coins.c  coins.h  color4f.c  color4f.h  enemy.c  enemy.h  error_codes.h  func.c  func.h  macro_consts.h  macro_functions.h  vec2.c  vec2.h
libs/glad/: CMakeLists.txt  Makefile  cmake_install.cmake
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
old builds/0.0.1.8 05.01.2024/levels/: level0.lvl
old builds/0.0.1.9 12.12.2023/levels/: level2.lvl
old builds/0.0.1.9 18.12.2023/levels/: level0.lvl  level1.lvl
old builds/0.0.2.16 09.12.2023/levels/: level0.lvl
res/coin_maps/: coin_map0.lvl  coin_map1.lvl  coin_map2.lvl
res/enemy_maps/: enemy_map0.lvl
res/levels/: level0.lvl  level1.lvl  level2.lvl
